// Vitest Snapshot v1

exports[`generate > matches inline snapshots 1`] = `
[
  {
    "c": 6,
  },
  {
    "a": 1,
    "c": 6,
  },
  {
    "a": 2,
    "c": 6,
  },
  {
    "a": [
      1,
      2,
    ],
    "c": 6,
  },
]
`;

exports[`generate > matches inline snapshots 2`] = `
[
  {
    "b": 10,
    "c": 6,
  },
  {
    "a": 1,
    "b": 10,
    "c": 6,
  },
  {
    "a": 2,
    "b": 10,
    "c": 6,
  },
  {
    "a": [
      1,
      2,
    ],
    "b": 10,
    "c": 6,
  },
  {
    "b": 10,
    "c": 6,
    "l": 5,
  },
  {
    "a": 1,
    "b": 10,
    "c": 6,
    "l": 5,
  },
  {
    "a": 2,
    "b": 10,
    "c": 6,
    "l": 5,
  },
  {
    "a": [
      1,
      2,
    ],
    "b": 10,
    "c": 6,
    "l": 5,
  },
]
`;
